fix: remove img vertical-align style

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -117,7 +117,7 @@ a {
 }
 
 img {
-  vertical-align: middle;
+  border: 0 none;
   border-style: none;
 }
 
